@startuml
' visual settings
!theme cerulean-outline
hide circle
skinparam linetype ortho
skinparam backgroundColor white


entity "User" {
  *Id : number <<generated>>
  --
  *Name : text
  *Role: enum
}

entity "Wishlist" {
  *Id : number <<generated>>
  --
  *UserId : number <<FK>>
  *CreatedAt : datetime
  *Description : text
}

entity "WishlistItem" {
  *Id : number <<generated>>
  --
  *WishlistId : number <<FK>>
  *BookId : number <<FK>>
  *PreferencePriority : enum
}

entity "Order" {
  *Id : number <<generated>>
  --
  *UserId : number <<FK>>
  *CreatedAt : datetime
  *State : enum
}

entity "OrderItem" {
  *Id : number <<generated>>
  --
  *OrderId : number <<FK>>
  *BookId : number <<FK>>
  *BookstoreId : number <<FK>>
  *Price : number
  *Quantity : number
}

entity "Book" {
  *Id : number <<generated>>
  --
  *Title : text
  *ISBN : text
  *PublisherId : number <<FK>>
  *BookGenre : enum
  *Description : text
  *Price: number
}

entity "Author" {
  *Id : number <<generated>>
  --
  *Name : text
  *Biography : text
}

entity "Publisher" {
  *Id : number <<generated>>
  --
  *Name : text
  *City : text
  *Country : text
  *YearFounded : number
}

entity "AuthorBookAssociation" {
  *Id : number <<generated>>
  --
  *IsPrimary : boolean
  *AuthorId : number <<FK>>
  *BookId : number <<FK>>
}

entity "BookReview" {
  *Id : number <<generated>>
  --
  *BookId : number <<FK>>
  *ReviewerId : number <<FK>>
  *Description : text
  *Rating : enum
}

entity "BookStore" {
  *Id : number <<generated>>
  --
  *AddressId : number <<FK>>
  *ManagerId : number <<FK>>
  *Name : text
  *PhoneNumber : text
  *Email : text
}

entity "Address" {
  *Id : number <<generated>>
  --
  *Street : text
  *StreetNumber : text
  *City : text
  *State : text
  *PostalCode : text
}

entity "InventoryItem" {
  *Id : number <<generated>>
  --
  *BookId : number <<FK>>
  *BookstoreId : number <<FK>>
  *InStock : number
  *LastRestock: datetime
}

User ||..o{ Wishlist
User ||..o{ Order
User ||..o{ BookReview
User ||..o| BookStore

Wishlist ||..o{ WishlistItem
Order ||..o{ OrderItem

Book ||..o{ BookReview
Book ||..o{ WishlistItem
Book ||..o{ OrderItem
Book ||..o{ AuthorBookAssociation
Book }o..|| Publisher

BookStore |o..|| Address
BookStore ||..o{ OrderItem

InventoryItem }o..|| BookStore
InventoryItem }o..|| Book

Author ||..o{ AuthorBookAssociation

@enduml
